:zap: finalizado menu aside para mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <aside>
       <a class="logo-spot">Logo</a>
-      <div id="menu-opener">
+      <div id="menu-opener" onclick="menuToggle()">
          <a ><i class="fas fa-bars"></i></a>
       </div>
       <div id="menu-area">
