--- a/index.html
+++ b/index.html
@@ -13,40 +13,44 @@
 </head>
 
 <body>
+    <!--- SEÇÃO DO MENU LATERAL PARA DISPOSITIVOS MOBILES --->
     <aside>
-      <a class="logo-spot">Logo</a>
-      <div id="menu-opener" onclick="menuToggle()">
-         <a ><i class="fas fa-bars"></i></a>
-      </div>
-      <div id="menu-area">
-          <nav>
-              <ul>
-                <li><a  href="#">Home</a></li>
-                <li><a  href="#">Sobre</a></li>
-                <li><a  href="#">Serviços</a></li>
-                <li><a  href="#">Portifolio</a></li>
-                <li><a  href="#">Equipe</a></li>
-                <li><a  href="#">Contato</a></li>
-              </ul>
-          </nav>
-      </div>
+        <a class="logo-spot">Logo</a>
+        <div id="menu-opener" onclick="menuToggle()">
+            <a><i class="fas fa-bars"></i></a>
+        </div>
+        <div id="menu-area">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Portifolio</a></li>
+                    <li><a href="#">Equipe</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </aside>
+    <!--SEÇAO HEADER COM STICKY VIA JS -->
     <header>
-        
+
         <a href="#" class="logo">Logo</a>
-        <ul> 
-            <li><a  href="#">Home</a></li>
-            <li><a  href="#">Sobre</a></li>
-            <li><a  href="#">Serviços</a></li>
-            <li><a  href="#">Portifolio</a></li>
-            <li><a  href="#">Equipe</a></li>
-            <li><a  href="#">Contato</a></li>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Portifolio</a></li>
+            <li><a href="#">Equipe</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
-    
+
     </header>
     <section class="banner"></section>
+    <!--   *********************    -->
+    <!--SEÇÃO RESTANTE DA APLICAÇÃO-->
     <section class="mais-info"></section>
-<script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
