:zap: FadeIn FadeOut logo para mobile em j-query

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>NavBar | Vanilla JS</title>
 </head>
 
 <body>
     <!--- SEÇÃO DO MENU LATERAL PARA DISPOSITIVOS MOBILES --->
     <aside>
-        <a class="logo-spot">Logo</a>
+        <a class="logoSpot">Logo</a>
         <div id="menu-opener" onclick="menuToggle()">
             <a><i class="fas fa-bars"></i></a>
         </div>
